--- a/tf_prek.html
+++ b/tf_prek.html
@@ -20,6 +20,7 @@
    <link rel="stylesheet" href="tf_reset.css" />
    <link rel="stylesheet" href="tf_styles2.css" />
    <link rel="stylesheet" href="tf_flex.css" />
+   <link rel="stylesheet" href="tf_navicon.css" />
 </head>
 
 <body>
@@ -27,6 +28,9 @@
       <img src="tf_logo.png" alt="Trusted Friends" />
 
       <nav class="horizontal">
+         <a href="#" id="navicon">
+            <img src="tf_navicon.png" alt="" />
+         </a>
          <ul>
             <li><a href="tf_home.html">Home</a></li>
             <li><a href="#">Infants</a></li>
